--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "generator-msaldotnetangular",
-  "version": "0.0.1",
-  "description": "Yeoman generator for creating a rich .NET console application with option selections and dependency injection",
+  "name": "generator-dotnet-csharp-console-commanding",
+  "version": "0.0.2",
+  "description": "Yeoman generator for creating a rich .NET5 console application with option selections and dependency injection",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,9 +16,6 @@
     "is-valid-path": "^0.1.1",
     "yeoman-generator": "^4.12.0"
   },
-  "files": [
-    "templates"
-  ],
   "devDependencies": {
     "@types/yeoman-generator": "^4.11.3",
     "yo": "^4.3.0"
