--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+    "dotnet",
+    "console",
+    "dependency injection"
   ],
   "author": "jt000",
   "license": "MIT",
+  "homepage": "https://github.com/jt000/generator-dotnet-csharp-console-commanding",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jt000/generator-dotnet-csharp-console-commanding.git"
+  },
   "dependencies": {
     "glob": "^7.1.6",
     "is-valid-path": "^0.1.1",
